--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -52,7 +52,7 @@
 					
 					<!-- Content -->
 					<div id="content" class="8u skel-cell-important">
-						<section><header><h2>Left Sidebar</h2>
+						<section><header><h2>Blog</h2>
 								<span class="byline">Integer sit amet pede vel arcu aliquet pretium</span>
 							</header><a href="#" class="image full"><img src="images/pic07.jpg" alt="" width="700" height="260"></a>
 							<p>Sed etiam vestibulum velit, euismod lacinia quam nisl id lorem. Quisque erat. Vestibulum pellentesque, justo mollis pretium suscipit, justo nulla blandit libero, in blandit augue justo quis nisl. Fusce mattis viverra elit. Fusce quis tortor. Consectetuer adipiscing elit. Nam pede erat, porta eu, lobortis eget lorem ipsum dolor. Sed etiam vestibulum velit, euismod lacinia quam nisl id lorem. Quisque erat. Vestibulum pellentesque, justo mollis pretium suscipit, justo nulla blandit libero, in blandit augue justo quis nisl. Fusce mattis viverra elit. Fusce quis tortor. Consectetuer adipiscing elit. Nam pede erat, porta eu, lobortis eget lorem ipsum dolor.</p>
