--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -12,7 +12,7 @@
 				
 				<!-- Logo -->
 				<div id="logo">
-					<h1><a href="#">Iridium</a></h1>
+					<h1><a href="#">Katherine's Site</a></h1>
 					<span>Design by TEMPLATED</span>
 				</div>
 				
