--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 				<!-- Nav -->
 				<nav id="nav"><ul><li class="active"><a href="index.html">Homepage</a></li>
 						<li><a href="left-sidebar.html">Blog</a></li>
-						<li><a href="right-sidebar.html">Resumer</a></li>
-						<li><a href="no-sidebar.html">About Mer</a></li>
+						<li><a href="right-sidebar.html">Resume</a></li>
+						<li><a href="no-sidebar.html">About Me</a></li>
 					</ul></nav></div>
 		</div>
 
@@ -31,8 +31,8 @@
 					
 					<!-- Content -->
 					<div id="content" class="8u skel-cell-important">
-						<section><header><h2>Welcome to Iridium!</h2>
-								<span class="byline">Integer sit amet pede vel arcu aliquet pretium</span>
+						<section><header><h2>Welcome to my website!</h2>
+								<span class="byline"> This site has no real focus other than myself and my hobbies!!</span>
 							</header><a href="#" class="image full"><img src="images/pic07.jpg" alt="" width="700" height="260"></a>
 							<p>This is <strong>Iridium</strong>, a responsive HTML5 site template freebie by <a href="http://templated.co">TEMPLATED</a>. Released for free under the <a href="http://templated.co/license">Creative Commons Attribution</a> license, so use it for whatever (personal or commercial) – just give us credit! Check out more of our stuff at <a href="http://templated.co">our site</a> or follow us on <a href="http://twitter.com/templatedco">Twitter</a>.</p>
 							<p>Sed etiam vestibulum velit, euismod lacinia quam nisl id lorem. Quisque erat. Vestibulum pellentesque, justo mollis pretium suscipit, justo nulla blandit libero, in blandit augue justo quis nisl. Fusce mattis viverra elit. Fusce quis tortor. Consectetuer adipiscing elit. Nam pede erat, porta eu, lobortis eget lorem ipsum dolor.</p>
