--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -16,14 +16,13 @@
 					<span>Design by TEMPLATED</span>
 				</div>
 				
-				<!-- Nav -->
-				<nav id="nav"><ul><li><a href="index.html">Homepage</a></li>
-						<li class="active"><a href="left-sidebar.html">Left Sidebar</a></li>
-						<li><a href="right-sidebar.html">Right Sidebar</a></li>
-						<li><a href="no-sidebar.html">No Sidebar</a></li>
+						<!-- Nav -->
+				<nav id="nav"><ul><li class="active"><a href="index.html">Homepage</a></li>
+						<li><a href="left-sidebar.html">Blog</a></li>
+						<li><a href="right-sidebar.html">Resume</a></li>
+						<li><a href="no-sidebar.html">About Me</a></li>
 					</ul></nav></div>
 		</div>
-
 		<!-- Main -->
 		<div id="main">
 			<div class="container">
